# 3DPcReg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_torch_open3d.cpp  pc_reg.cpp  pc_reg.h  utils.cpp  utils.h
include/: 3DCamera.hpp  CameraToOpen3d.h  Evaluation.h  FeatureCompute.h  PointCloudReader.h  Registration.h  Registration_mix.h  SolveCorrespondenceAndRigidTransformation.h  statistics.h  utils.h
include/3DCamerahpp/: APIExport.hpp  Camera.hpp  Frame.hpp  Processing.hpp  System.hpp  Types.hpp
include/3DCamerahpp/HandEye/: HandEye.hpp  HandEyeInput.hpp
lib/windows/: 3DCamera.lib  3DCamerad.lib  HandEye.lib
snapshot/: 00000.json  00001.json  00002.json  00003.json  00004.json  00004_analysis.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  00021.json  00022.json  evaluate.py  success_avg.py
src/: CameraToOpen3d.cpp  Evaluation.cpp  FeatureCompute.cpp  PointCloudReader.cpp  Registration.cpp  Registration_mix.cpp  SolveCorrespondenceAndRigidTransformation.cpp  statistics.cpp  utils.cpp
